--- a/index.html
+++ b/index.html
@@ -560,9 +560,11 @@
                 setInterval(() => this.simulateWater(), 400);
             }
 
-            updateMobs(delta) {
-                this.mobs.forEach(m => m.update(delta));
+            updateMobs(delta, player) {
+                this.mobs.forEach(m => m.update(delta, player));
             }
+            // ... (getBlock/placeBlock methods) ...
+
 
             getBlock(x, y, z) { return this.blocks.has(`${x},${y},${z}`); }
             getBlockType(x, y, z) { return this.blocks.get(`${x},${y},${z}`); }
