--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             }
         }
     </script>
+    <script src="/socket.io/socket.io.js"></script>
 
     <script type="module">
         import * as THREE from 'three';
