Migrate to Trystero for P2P serverless multiplayer

--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
         {
             "imports": {
                 "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
-                "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/"
+                "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
+                "trystero": "https://esm.sh/trystero"
             }
         }
     </script>
-    <script src="/socket.io/socket.io.js"></script>
 
     <script type="module">
         import * as THREE from 'three';
