--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
         </div>
         <div id="info">WASD to Move | SPACE Jump/Swim | Click to Mine | 1-9 Select<br>Water Physics Enabled</div>
         <div id="block-count">Blocks: 0</div>
+        <div id="player-count">Players: 1 (Searching...)</div>
     </div>
 
     <script type="importmap">
@@ -112,7 +113,7 @@
             "imports": {
                 "three": "https://unpkg.com/three@0.160.0/build/three.module.js",
                 "three/addons/": "https://unpkg.com/three@0.160.0/examples/jsm/",
-                "trystero": "https://esm.sh/trystero"
+                "trystero": "https://esm.sh/trystero@0.19.0/mqtt"
             }
         }
     </script>
